<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <!-- TextView
        android:textSize="20sp"
        android:text="@string/intropage_title"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/  -->
    <TextView
        android:fontFamily="@string/intropage_font"
        android:text="@string/intropage_text"
        android:textSize="@dimen/intropage_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:fontFamily="@string/intropage_font"
        android:text="@string/intropage_text_household"
        android:textSize="@dimen/intropage_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:fontFamily="@string/intropage_font"
        android:text="@string/intropage_text_groceries"
        android:textSize="@dimen/intropage_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:fontFamily="@string/intropage_font"
        android:text="@string/intropage_text_credits"
        android:textSize="@dimen/intropage_textsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Button
        android:id="@+id/button"
        android:text="@string/pickpage_ages_button_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" / -->

</LinearLayout>
