<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pickPageBackground"
    >
    <!--
     *-
     *- Pick the number of people in the household, pick age and gender
     *-     display the calorie and serving recommendations
     *- Pick a department, then a product, then the quantity
     *-
     -->
    <TextView
        android:text="@string/pickpage_person_title"
        android:id="@+id/pickpage_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pickpage_title_height"
        android:textStyle="bold"
        android:textSize="@dimen/pickpage_title_textsize"
        android:textColor="@color/pickPage"
        />
    <TextView
        android:text="@string/pickpage_persons"
        android:id="@+id/pickpage_persons"
        android:layout_below="@id/pickpage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_label_textsize"
        android:textColor="@color/pickPage" />
    <TextView
        android:text="@string/pickpage_ages"
        android:id="@+id/pickpage_ages"
        android:layout_below="@id/pickpage_persons"
        android:layout_alignRight="@id/pickpage_persons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_label_textsize"
        android:textColor="@color/pickPage" />
    <TextView
        android:text="@string/pickpage_women"
        android:id="@+id/pickpage_women_label"
        android:layout_below="@id/pickpage_ages"
        android:layout_alignLeft="@id/pickpage_ages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!-- EditText
        android:layout_toRightOf="@id/pickpage_women_label"
        android:layout_below="@id/pickpage_ages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_girl_toddlers"
        android:layout_below="@id/pickpage_ages"
        android:layout_toRightOf="@id/pickpage_women_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_toddlers"
        android:id="@+id/pickpage_ages_girl_toddlers_label"
        android:layout_below="@id/pickpage_ages"
        android:layout_toRightOf="@id/pickpage_ages_girl_toddlers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!-- EditText
        android:text="0"
        android:id="@+id/pickpage_ages_girl_children"
        android:layout_below="@id/pickpage_ages"
        android:layout_alignLeft="@+id/pickpage_ages_women_adults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        /-->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_girl_children"
        android:layout_below="@id/pickpage_ages"
        android:layout_alignLeft="@+id/pickpage_ages_women_adults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_children"
        android:id="@+id/pickpage_ages_girl_children_label"
        android:layout_below="@id/pickpage_ages"
        android:layout_toRightOf="@id/pickpage_ages_girl_children"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_girl_youths"
        android:layout_below="@id/pickpage_ages"
        android:layout_alignLeft="@+id/pickpage_ages_women_elderly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_girl_youths"
        android:layout_below="@id/pickpage_ages"
        android:layout_alignLeft="@+id/pickpage_ages_women_elderly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_youths"
        android:id="@+id/pickpage_ages_girl_youths_label"
        android:layout_below="@id/pickpage_ages"
        android:layout_toRightOf="@id/pickpage_ages_girl_youths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />

    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_women_teens"
        android:layout_below="@id/pickpage_ages_girl_toddlers"
        android:layout_alignLeft="@id/pickpage_ages_girl_toddlers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_women_teens"
        android:layout_below="@id/pickpage_ages_girl_toddlers"
        android:layout_alignLeft="@id/pickpage_ages_girl_toddlers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_teens"
        android:id="@+id/pickpage_ages_women_teens_label"
        android:layout_below="@id/pickpage_ages_girl_toddlers"
        android:layout_toRightOf="@id/pickpage_ages_women_teens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="1"
        android:id="@+id/pickpage_ages_women_adults"
        android:layout_below="@id/pickpage_ages_girl_children"
        android:layout_toRightOf="@id/pickpage_ages_women_teens_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_women_adults"
        android:layout_below="@id/pickpage_ages_girl_children"
        android:layout_toRightOf="@id/pickpage_ages_women_teens_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_adults"
        android:id="@+id/pickpage_ages_women_adults_label"
        android:layout_below="@id/pickpage_ages_girl_children"
        android:layout_toRightOf="@id/pickpage_ages_women_adults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_women_elderly"
        android:layout_below="@id/pickpage_ages_girl_youths"
        android:layout_toRightOf="@id/pickpage_ages_women_adults_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_women_elderly"
        android:layout_below="@id/pickpage_ages_girl_youths"
        android:layout_toRightOf="@id/pickpage_ages_women_adults_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_elderly"
        android:id="@+id/pickpage_ages_women_elderly_label"
        android:layout_below="@id/pickpage_ages_girl_children"
        android:layout_toRightOf="@id/pickpage_ages_women_elderly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />

    <TextView
        android:text="@string/pickpage_men"
        android:id="@+id/pickpage_men_label"
        android:layout_below="@id/pickpage_ages_women_teens"
        android:layout_alignLeft="@id/pickpage_ages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_boy_toddlers"
        android:layout_below="@id/pickpage_ages_women_teens"
        android:layout_alignLeft="@id/pickpage_ages_women_teens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_boy_toddlers"
        android:layout_below="@id/pickpage_ages_women_teens"
        android:layout_alignLeft="@id/pickpage_ages_women_teens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_toddlers"
        android:id="@+id/pickpage_ages_boy_toddlers_label"
        android:layout_below="@id/pickpage_ages_women_teens"
        android:layout_toRightOf="@id/pickpage_ages_boy_toddlers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_boy_children"
        android:layout_below="@id/pickpage_ages_women_adults"
        android:layout_alignLeft="@id/pickpage_ages_women_adults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_boy_children"
        android:layout_below="@id/pickpage_ages_women_adults"
        android:layout_alignLeft="@id/pickpage_ages_women_adults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_children"
        android:id="@+id/pickpage_ages_boy_children_label"
        android:layout_below="@id/pickpage_ages_women_elderly"
        android:layout_toRightOf="@id/pickpage_ages_boy_children"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_boy_youths"
        android:layout_below="@id/pickpage_ages_women_elderly"
        android:layout_alignLeft="@id/pickpage_ages_women_elderly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_boy_youths"
        android:layout_below="@id/pickpage_ages_women_elderly"
        android:layout_alignLeft="@id/pickpage_ages_women_elderly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_youths"
        android:id="@+id/pickpage_ages_boy_youths_label"
        android:layout_below="@id/pickpage_ages_women_elderly"
        android:layout_toRightOf="@id/pickpage_ages_boy_youths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />

    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_men_teens"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_alignLeft="@id/pickpage_ages_boy_toddlers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_men_teens"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_alignLeft="@id/pickpage_ages_boy_toddlers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_teens"
        android:id="@+id/pickpage_ages_men_teens_label"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_toRightOf="@id/pickpage_ages_men_teens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="1"
        android:id="@+id/pickpage_ages_men_adults"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_toRightOf="@id/pickpage_ages_men_teens_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_men_adults"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_toRightOf="@id/pickpage_ages_men_teens_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_adults"
        android:id="@+id/pickpage_ages_men_adults_label"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_toRightOf="@id/pickpage_ages_men_adults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />
    <!--EditText
        android:text="0"
        android:id="@+id/pickpage_ages_men_elderly"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_toRightOf="@id/pickpage_ages_men_adults_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:inputType="numberDecimal"
        / -->
    <Spinner
        android:text="0"
        android:id="@+id/pickpage_ages_men_elderly"
        android:layout_below="@id/pickpage_ages_boy_toddlers"
        android:layout_toRightOf="@id/pickpage_ages_men_adults_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pickpage_edittext_height"
        android:entries="@array/pickpage_ages_picklist"
        />
    <TextView
        android:text="@string/pickpage_ages_elderly"
        android:id="@+id/pickpage_ages_men_elderly_label"
        android:layout_below="@id/pickpage_ages_boy_youths"
        android:layout_toRightOf="@id/pickpage_ages_men_elderly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pickPage"
        android:textSize="@dimen/pickpage_label_textsize"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickpage_ages_men_teens"
        android:layout_alignLeft="@id/pickpage_ages_men_teens"
        android:text="@string/pickpage_ages_button_name" />


    <TextView
        android:id="@+id/pickpage_ages_instructions"
        android:text="@string/pickpage_ages_instructions"
        android:layout_below="@id/button"
        android:layout_alignLeft="@id/pickpage_ages_men_teens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pickpage_ages_summary"
        android:layout_below="@id/pickpage_ages_instructions"
        android:layout_alignLeft="@id/pickpage_ages_men_teens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>